# psfun

./: .buildinfo  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  examples.html  f-modindex.html  genindex.html  index.html  krylov.html  objects.inv  psfunlibrary.html  quadrature.html  search.html  searchindex.js  serial.html  utils.html  zreferences.html
_sources/: examples.rst.txt  index.rst.txt  krylov.rst.txt  serial.rst.txt
cmake/: FindAMG4PSBLAS.cmake  FindGNUPLOTFORTRAN.cmake  FindPHIFUNCTION.cmake  FindPSBLAS.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  conf.py.in  examples.rst  forddocs.md.in  index.rst  krylov.rst  psfunlibrary.rst  quadrature.rst  refgeneral.bib  refserial.bib  serial.rst  utils.rst  zreferences.rst
docs/html/: search.html
docs/html/interface/: dquadrule.html  ellipkkp.html  horner.html  zquadfun.html
docs/html/lists/: files.html  modules.html  types.html
docs/html/module/: getp.html  psfun_d_arnoldi_mod.html  psfun_d_krylov_mod.html  psfun_d_quadrature_mod.html  psfun_quadrature_mod.html  psfun_utils_mod.html  psfun_z_quadrules_mod.html
docs/html/page/: algorithms.html  index.html
docs/html/proc/: fun.html  get_parms~2.html  get_parms~3.html  pr_usage~3.html  psfun_d_parallel_apply.html  psfun_d_prec_build.html  psfun_d_serial_apply_array.html  psfun_dcg_vect.html  psfun_z_computepoles.html  psfun_z_quadratureplot.html  psfun_z_setmatrix.html  psfun_z_setpreconditioner.html
docs/html/program/: arnolditest.html  psblastest.html  quadraturetest.html  serialtest.html  utiltest.html
docs/html/sourcefile/: getp.f90.html  psfun_base_quadrature_mod.f90.html  psfun_d_arnoldi.f90.html  psfun_d_lanczos.f90.html  psfun_d_quadrature_mod.f90.html  psfun_d_sai.f90.html  psfun_d_serial_mod.f90.html  psfun_krylov_mod.f90.html  psfun_quadrature_mod.f90.html  psfun_z_quadrature_mod.f90.html  psfun_z_utils_mod.f90.html  utiltest.f90.html
docs/html/src/: arnolditest.F90  psfun_d_krylov_mod.F90  psfun_d_utils_mod.f90  psfun_quadrature_mod.f90  psfun_z_utils_mod.f90  quadraturetest.F90  utiltest.f90
docs/html/type/: psfun_d_serial.html  psfun_z_quadrature.html
docs/pages/: algorithms.md  examples.md  index.md  utils.md
examples/: CMakeLists.txt
examples/environment/: CMakeLists.txt  psblastest.f90
examples/polynomial/: CMakeLists.txt  arnoldi.inp  arnolditest.F90  arnolditest.f90  lanczos.inp  lanczostest.F90  lanczostest.f90
examples/quadrature/: CMakeLists.txt  quadraturetest.F90
examples/serial/: CMakeLists.txt  laplacian.mtx  serial.inp  serialtest.f90
examples/shiftedkrylov/: CMakeLists.txt  getp.f90  shifted.inp  shiftedtest.f90
examples/utils/: CMakeLists.txt  utiltest.f90
interface/: dquadfun.html  ellipj.html  func.html  get_parms.html  hhtmethod1.html  psb_krylov.html  psfun_d_arnoldi.html  psfun_d_lanczos.html  psfun_d_saiarnoldi.html  zquadrule.html
krylov/: CMakeLists.txt  psfun_d_krylov_mod.F90  psfun_d_krylov_mod.f90  psfun_krylov_mod.f90
krylov/polynomial/: d_lanczos.f90  psfun_d_arnoldi.f90  psfun_d_lanczos.f90
krylov/rational/: psfun_d_sai.f90
krylov/shifted/: psfun_dcg.F90
lists/: absint.html  files.html  modules.html  procedures.html  programs.html  types.html
module/: getp.html  psfun_base_quadrature_mod.html  psfun_d_arnoldi_mod.html  psfun_d_krylov_mod.html  psfun_d_lanczos_mod.html  psfun_d_quadrature_mod.html  psfun_d_sai_mod.html  psfun_d_serial_mod.html  psfun_d_utils_mod.html  psfun_krylov_mod.html  psfun_quadrature_mod.html  psfun_utils_mod.html  psfun_z_quadrature_mod.html  psfun_z_quadrules_mod.html  psfun_z_utils_mod.html
page/: examples.html  utils.html
proc/: get_dparms.html  get_parms.html  get_parms~2.html  get_parms~3.html  pr_usage.html  pr_usage~2.html  pr_usage~3.html  psfun_d_parallel_apply.html  psfun_d_plot_info.html  psfun_d_prec_build.html  psfun_d_prec_init.html  psfun_d_quadratureplot.html  psfun_d_serial_apply_array.html  psfun_d_serial_apply_sparse.html  psfun_dcg_vect.html  psfun_dkrylov_vect.html  psfun_z_computepoles.html  psfun_z_quadratureplot.html
program/: arnolditest.html  lanczostest.html  psblastest.html  quadraturetest.html  serialtest.html  shiftedtest.html  utiltest.html
quadratures/: CMakeLists.txt  psfun_base_quadrature_mod.f90  psfun_d_quadrature_mod.F90  psfun_d_quadrature_mod.f90  psfun_quadrature_mod.f90  psfun_z_quadrature_mod.F90  psfun_z_quadrature_mod.f90  psfun_z_quadrules_mod.f90
serial/: CMakeLists.txt  psfun_d_serial_mod.F90  psfun_d_serial_mod.f90
serial/exponential/: expokitnotice.md  r8lib.f90  taylor.f90
sourcefile/: arnolditest.f90.html  getp.f90.html  lanczostest.f90.html  psblastest.f90.html  psfun_base_quadrature_mod.f90.html  psfun_d_arnoldi.f90.html  psfun_d_krylov_mod.f90.html  psfun_d_lanczos.f90.html  psfun_d_quadrature_mod.f90.html  psfun_d_sai.f90.html  psfun_d_serial_mod.f90.html  psfun_d_utils_mod.f90.html  psfun_dcg.f90.html  psfun_krylov_mod.f90.html  psfun_quadrature_mod.f90.html  psfun_utils_mod.f90.html  psfun_z_quadrature_mod.f90.html  psfun_z_quadrules_mod.f90.html  psfun_z_utils_mod.f90.html  quadraturetest.f90.html  serialtest.f90.html  shiftedtest.f90.html  utiltest.f90.html
src/: getp.f90  lanczostest.F90  psblastest.f90  psfun_base_quadrature_mod.f90  psfun_d_arnoldi.f90  psfun_d_lanczos.f90  psfun_d_quadrature_mod.F90  psfun_d_sai.f90  psfun_d_serial_mod.F90  psfun_dcg.F90  psfun_krylov_mod.f90  psfun_utils_mod.f90  psfun_z_quadrature_mod.F90  psfun_z_quadrules_mod.f90  serialtest.f90  shiftedtest.f90
tipuesearch/: tipuesearch_content.js
type/: psfun_d_krylov.html  psfun_d_quadrature.html  psfun_d_serial.html  psfun_quadrature.html  psfun_z_quadrature.html
utils/: CMakeLists.txt  psfun_d_utils_mod.f90  psfun_utils_mod.f90  psfun_z_utils_mod.f90
utils/libraries/: elliptic_integral.f90  ogpf.f90
